WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174070
REGRESSION (
r217522
): "Show My Relationship" link in familysearch.org does not work.
https://bugs.webkit.org/show_bug.cgi?id=174070
Summary
REGRESSION (r217522): "Show My Relationship" link in familysearch.org does no...
alan
Reported
2017-07-01 20:52:50 PDT
rdar://problem/32940653
Attachments
Patch
(21.81 KB, patch)
2017-07-01 22:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.89 KB, patch)
2017-07-03 10:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.96 KB, patch)
2017-07-03 10:40 PDT
,
alan
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews117 for mac-elcapitan
(1.39 MB, application/zip)
2017-07-03 11:56 PDT
,
Build Bot
no flags
Details
Patch
(10.19 KB, patch)
2017-07-03 12:55 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-elcapitan-wk2
(2.02 MB, application/zip)
2017-07-03 14:15 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(1.72 MB, application/zip)
2017-07-03 15:51 PDT
,
Build Bot
no flags
Details
Patch
(12.51 KB, patch)
2017-07-03 17:09 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(12.68 KB, patch)
2017-07-05 10:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(8)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-07-01 22:05:14 PDT
Created
attachment 314404
[details]
Patch
alan
Comment 2
2017-07-03 09:59:30 PDT
alternatively we could take a more conservative change to fix familysearch.org/hbr.org
alan
Comment 3
2017-07-03 10:03:02 PDT
Created
attachment 314493
[details]
Patch
alan
Comment 4
2017-07-03 10:40:12 PDT
Created
attachment 314495
[details]
Patch
Build Bot
Comment 5
2017-07-03 11:56:27 PDT
Comment on
attachment 314495
[details]
Patch
Attachment 314495
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/4045880
Number of test failures exceeded the failure limit.
Build Bot
Comment 6
2017-07-03 11:56:28 PDT
Created
attachment 314505
[details]
Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
alan
Comment 7
2017-07-03 12:55:09 PDT
Created
attachment 314507
[details]
Patch
Build Bot
Comment 8
2017-07-03 14:15:05 PDT
Comment on
attachment 314507
[details]
Patch
Attachment 314507
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/4046646
New failing tests: workers/bomb.html
Build Bot
Comment 9
2017-07-03 14:15:06 PDT
Created
attachment 314516
[details]
Archive of layout-test-results from ews104 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 10
2017-07-03 15:51:00 PDT
Comment on
attachment 314507
[details]
Patch
Attachment 314507
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/4047140
New failing tests: imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/centering.html
Build Bot
Comment 11
2017-07-03 15:51:01 PDT
Created
attachment 314529
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
alan
Comment 12
2017-07-03 17:06:15 PDT
(In reply to Build Bot from
comment #10
)
> Comment on
attachment 314507
[details]
> Patch > >
Attachment 314507
[details]
did not pass ios-sim-ews (ios-simulator-wk2): > Output:
http://webkit-queues.webkit.org/results/4047140
> > New failing tests: > imported/w3c/web-platform-tests/html/semantics/interactive-elements/the- > dialog-element/centering.html
Crashes, really? I don't think so.
alan
Comment 13
2017-07-03 17:09:53 PDT
Created
attachment 314540
[details]
Patch
Simon Fraser (smfr)
Comment 14
2017-07-05 08:27:24 PDT
Comment on
attachment 314540
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314540&action=review
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=174070
Radar number here. Also mention hbr.org
> Source/WebCore/ChangeLog:8 > + Decouple in and out of flow computed position values.
"in- and out-of-flow". Mention compat with other browsers.
> Source/WebCore/css/CSSComputedStyleDeclaration.cpp:794 > + // Inflow element.
In-flow
> LayoutTests/ChangeLog:8 > + * fast/css/getComputedStyle/computed-style-expected.txt:
Does this test exercise all the code paths (out of flow, relative position, static position, non-block)?
> LayoutTests/imported/w3c/web-platform-tests/css-timing-1/frames-timing-functions-output-expected.txt:6 > +FAIL For an input progress of 0.0, the output of a frames timing function is the first frame assert_equals: expected "0px" but got "auto" > +FAIL At a frame boundary, the output of a frames timing function is the next frame assert_equals: expected "0px" but got "auto" > +FAIL For an input progress of 1.0, the output of a frames timing function is the final frame assert_equals: expected "100px" but got "auto" > +FAIL The number of frames is correctly reflected in the frames timing function output assert_equals: expected "0px" but got "auto" > +FAIL The number of frames is correctly reflected in the frames timing function output on CSS Transitions assert_equals: expected "0px" but got "100px"
It's odd that these are regressing if we now match Chrome behavior.
alan
Comment 15
2017-07-05 10:38:51 PDT
Created
attachment 314615
[details]
Patch
WebKit Commit Bot
Comment 16
2017-07-05 13:21:37 PDT
Comment on
attachment 314615
[details]
Patch Clearing flags on attachment: 314615 Committed
r219151
: <
http://trac.webkit.org/changeset/219151
>
WebKit Commit Bot
Comment 17
2017-07-05 13:21:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug