REGRESSION (r217522): "Show My Relationship" link in familysearch.org does not work. https://bugs.webkit.org/show_bug.cgi?id=174070 LayoutTests/imported/w3c:

Reviewed by Simon Fraser.

* web-platform-tests/css-timing-1/frames-timing-functions-output-expected.txt:
* web-platform-tests/html/semantics/interactive-elements/the-dialog-element/centering-expected.txt:

Source/WebCore:

<rdar://problem/32940653>

Reviewed by Simon Fraser.

Decouple in- and out-of-flow computed position values. Now we match blink's implementation on
in-flow values.
This also fixes the flickering content while scrolling on hbr.org.

Covered by existing test cases.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::positionOffsetValue):

LayoutTests:

Reviewed by Simon Fraser.

* fast/css/getComputedStyle/computed-style-expected.txt:


Canonical link: https://commits.webkit.org/191002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219151 268f45cc-cd09-0410-ab3c-d52691b4dbfc